--- a/src/templates/end.html
+++ b/src/templates/end.html
@@ -1,6 +1,40 @@
 <!--footer-->
 <footer class="footer-main">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="copyright">
+                    &copy; 2010 Candilicious
+                </div>
+            </div>
 
+            <div class="col-md-9">
+                <ul class="footer-menu">
+                    <li class="footer-menu__item">
+                        <a href="#" class="footer-menu__Link">Home</a>
+                    </li>
+                    <li class="footer-menu__item">
+                        <a href="#" class="footer-menu__link">Our Candy</a>
+                    </li>
+                    <li class="footer-menu__item">
+                        <a href="#" class="footer-menu__link">Our Story</a>
+                    </li>
+                    <li class="footer-menu__item">
+                        <a href="#" class="footer-menu__link">Candy Shop</a>
+                    </li>
+                    <li class="footer-menu__item">
+                        <a href="#" class="footer-menu__link">Contact</a>
+                    </li>
+                    <li class="footer-menu__item">
+                        <a href="#" class="footer-menu__link">Blog</a>
+                    </li>
+
+
+                </ul>
+
+            </div>
+        </div>
+    </div>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
